--- a/form.ui
+++ b/form.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>330</width>
-    <height>166</height>
+    <width>621</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
@@ -32,13 +32,6 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QToolButton" name="nextBtn">
-          <property name="text">
-           <string>Next</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="page_2">
@@ -53,16 +46,33 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QToolButton" name="backBtn">
-          <property name="text">
-           <string>Back</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
      </widget>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QToolButton" name="backBtn">
+        <property name="focusPolicy">
+         <enum>Qt::ClickFocus</enum>
+        </property>
+        <property name="text">
+         <string>Page1</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="nextBtn">
+        <property name="focusPolicy">
+         <enum>Qt::ClickFocus</enum>
+        </property>
+        <property name="text">
+         <string>Page2</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -71,8 +81,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>330</width>
-     <height>22</height>
+     <width>621</width>
+     <height>32</height>
     </rect>
    </property>
   </widget>
